@startuml
!theme plain

hide circle
skinparam linetype ortho

entity User {
  * Id: uuid [PK]
  --
  * Email: varchar(255) [UNIQUE]
  * PasswordHash: varchar(255)
  * DisplayName: varchar(100)
  * CreatedAt: timestamptz [DEFAULT now()]
}

entity Category {
  * Id: uuid [PK]
  --
  * Name: varchar(50) [UNIQUE]
  * Label: varchar(50)
  * SortOrder: int [DEFAULT 0]
}

entity Todo {
  * Id: uuid [PK]
  --
  * UserId: uuid [FK -> User.Id]
  * CategoryId: uuid [FK -> Category.Id]
  * Text: text
  * Completed: boolean [DEFAULT false]
  * CreatedAt: timestamptz [DEFAULT now()]
  DueDate: date [NULLABLE]
  Priority: varchar(10) [CHECK: 'low'|'medium'|'high', NULLABLE]
  Price: decimal(10,2) [NULLABLE]
}

entity Subtask {
  * Id: uuid [PK]
  --
  * TodoId: uuid [FK -> Todo.Id]
  * Text: text
  * Completed: boolean [DEFAULT false]
  * SortOrder: int [DEFAULT 0]
}

entity BudgetEntry {
  * Id: uuid [PK]
  --
  * UserId: uuid [FK -> User.Id]
  * Type: varchar(10) [CHECK: 'income'|'expense']
  * Category: varchar(100)
  * Amount: decimal(12,2) [CHECK: >= 0]
  * Description: text [DEFAULT '']
  * Date: date
  * CreatedAt: timestamptz [DEFAULT now()]
}

User ||--o{ Todo : owns
User ||--o{ BudgetEntry : owns
Category ||--o{ Todo : categorizes
Todo ||--o{ Subtask : contains

note top of User
  Auth pages exist but no auth
  context yet — placeholder
  for future implementation
end note

note right of Category
  Seeded values:
  Todo, Shopping, Personal,
  Work, Others
end note

note right of BudgetEntry
  Tracks income and expenses
  for user budget management
end note

note bottom of Subtask
  Cascade delete with Todo
  Stored as separate entity
  (not embedded JSON)
end note
@enduml
